added flags to disable some stages from running if you dont need them

--- a/config.yaml
+++ b/config.yaml
@@ -1,1 +1,5 @@
 chia_config_file: C:\Users\Admin\.chia\mainnet\config\config.yaml
+check_for_non_plots: false
+check_duplicates_plots: false
+evacuate_plots:
+  -Q:\farm003
