--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,20 @@
+# location of Chia's configuration file. It is used to navigate the plots directories
 chia_config_file: C:\Users\Admin\.chia\mainnet\config\config.yaml
+
+# when verbose is false, the program reduces the number of messages generated to the minimum. False by defaults
+verbose: true
+
+# you can enable or disable parts of the program through these toggles
+# check_for_non_plots is true or false. When True we scan for plots that do not have .plot extension
 check_for_non_plots: true
+
+# check_duplicates_plots is true or false. When true we scan for duplicate file names
 check_duplicates_plots: true
-verbose: false
-evacuate_plots:
-  -Q:\farm003
+
+# defrag the farm
+defragment_the_farm: true
+
+# evacuate_plots is a list of plots that you want to empty out as you use this software
+#evacuate_drives:
+#  - Q:\
+#  - L:\
